make a new navbar to make it can maximize, mininize,close and drag main window.

--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -190,3 +190,11 @@ code {
 .fr {
   float: right;
 }
+
+.electron-drag {
+  -webkit-app-region: drag
+}
+
+.electron-no-drag {
+  -webkit-app-region: no-drag
+}
